MiniCompiladorWorkflow/generated/gramaticaParser.py
# Generated from gramatica.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramaticaParser ( Parser ):

    grammarFileName = "gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'tarea'", "'ir_a'", "'si'", "'print'", 
                     "'input'", "'if'", "'else'", "'while'", "'{'", "'}'", 
                     "'('", "')'", "';'", "'='", "'+'", "'-'", "'*'", "'/'", 
                     "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", 
                     "'||'", "'!'" ]

    symbolicNames = [ "<INVALID>", "T_TAREA", "T_IR_A", "T_SI", "T_PRINT", 
                      "T_INPUT", "T_IF", "T_ELSE", "T_WHILE", "T_LBRACE", 
                      "T_RBRACE", "T_LPAREN", "T_RPAREN", "T_SEMICOLON", 
                      "T_ASSIGN", "T_PLUS", "T_MINUS", "T_MUL", "T_DIV", 
                      "T_EQ", "T_NEQ", "T_GT", "T_LT", "T_GEQ", "T_LEQ", 
                      "T_AND", "T_OR", "T_NOT", "ID", "NUMBER", "STRING", 
                      "WS", "COMMENT", "MULTILINE_COMMENT" ]

    RULE_program = 0
    RULE_task = 1
    RULE_transition = 2
    RULE_statement = 3
    RULE_assignment = 4
    RULE_printStmt = 5
    RULE_inputStmt = 6
    RULE_ifStmt = 7
    RULE_whileStmt = 8
    RULE_expression = 9
    RULE_logicalOrExpression = 10
    RULE_logicalAndExpression = 11
    RULE_equalityExpression = 12
    RULE_relationalExpression = 13
    RULE_additiveExpression = 14
    RULE_multiplicativeExpression = 15
    RULE_primary = 16

    ruleNames =  [ "program", "task", "transition", "statement", "assignment", 
                   "printStmt", "inputStmt", "ifStmt", "whileStmt", "expression", 
                   "logicalOrExpression", "logicalAndExpression", "equalityExpression", 
                   "relationalExpression", "additiveExpression", "multiplicativeExpression", 
                   "primary" ]

    EOF = Token.EOF
    T_TAREA=1
    T_IR_A=2
    T_SI=3
    T_PRINT=4
    T_INPUT=5
    T_IF=6
    T_ELSE=7
    T_WHILE=8
    T_LBRACE=9
    T_RBRACE=10
    T_LPAREN=11
    T_RPAREN=12
    T_SEMICOLON=13
    T_ASSIGN=14
    T_PLUS=15
    T_MINUS=16
    T_MUL=17
    T_DIV=18
    T_EQ=19
    T_NEQ=20
    T_GT=21
    T_LT=22
    T_GEQ=23
    T_LEQ=24
    T_AND=25
    T_OR=26
    T_NOT=27
    ID=28
    NUMBER=29
    STRING=30
    WS=31
    COMMENT=32
    MULTILINE_COMMENT=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(gramaticaParser.EOF, 0)

        def task(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.TaskContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.TaskContext,i)


        def transition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.TransitionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.TransitionContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = gramaticaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 34
                    self.task()
                    pass
                elif token in [2]:
                    self.state = 35
                    self.transition()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 38 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1 or _la==2):
                    break

            self.state = 40
            self.match(gramaticaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TaskContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_TAREA(self):
            return self.getToken(gramaticaParser.T_TAREA, 0)

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def T_LBRACE(self):
            return self.getToken(gramaticaParser.T_LBRACE, 0)

        def T_RBRACE(self):
            return self.getToken(gramaticaParser.T_RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.StatementContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.StatementContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_task

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTask" ):
                listener.enterTask(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTask" ):
                listener.exitTask(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTask" ):
                return visitor.visitTask(self)
            else:
                return visitor.visitChildren(self)




    def task(self):

        localctx = gramaticaParser.TaskContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_task)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(gramaticaParser.T_TAREA)
            self.state = 43
            self.match(gramaticaParser.ID)
            self.state = 44
            self.match(gramaticaParser.T_LBRACE)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 268435828) != 0):
                self.state = 45
                self.statement()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self.match(gramaticaParser.T_RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_IR_A(self):
            return self.getToken(gramaticaParser.T_IR_A, 0)

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def T_SEMICOLON(self):
            return self.getToken(gramaticaParser.T_SEMICOLON, 0)

        def T_SI(self):
            return self.getToken(gramaticaParser.T_SI, 0)

        def expression(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_transition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransition" ):
                listener.enterTransition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransition" ):
                listener.exitTransition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransition" ):
                return visitor.visitTransition(self)
            else:
                return visitor.visitChildren(self)




    def transition(self):

        localctx = gramaticaParser.TransitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_transition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(gramaticaParser.T_IR_A)
            self.state = 54
            self.match(gramaticaParser.ID)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 55
                self.match(gramaticaParser.T_SI)
                self.state = 56
                self.expression()


            self.state = 59
            self.match(gramaticaParser.T_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(gramaticaParser.AssignmentContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(gramaticaParser.PrintStmtContext,0)


        def inputStmt(self):
            return self.getTypedRuleContext(gramaticaParser.InputStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(gramaticaParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(gramaticaParser.WhileStmtContext,0)


        def transition(self):
            return self.getTypedRuleContext(gramaticaParser.TransitionContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = gramaticaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.assignment()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.printStmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.inputStmt()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 64
                self.ifStmt()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 65
                self.whileStmt()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 6)
                self.state = 66
                self.transition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def T_ASSIGN(self):
            return self.getToken(gramaticaParser.T_ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressionContext,0)


        def T_SEMICOLON(self):
            return self.getToken(gramaticaParser.T_SEMICOLON, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = gramaticaParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(gramaticaParser.ID)
            self.state = 70
            self.match(gramaticaParser.T_ASSIGN)
            self.state = 71
            self.expression()
            self.state = 72
            self.match(gramaticaParser.T_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_PRINT(self):
            return self.getToken(gramaticaParser.T_PRINT, 0)

        def T_LPAREN(self):
            return self.getToken(gramaticaParser.T_LPAREN, 0)

        def T_RPAREN(self):
            return self.getToken(gramaticaParser.T_RPAREN, 0)

        def T_SEMICOLON(self):
            return self.getToken(gramaticaParser.T_SEMICOLON, 0)

        def STRING(self):
            return self.getToken(gramaticaParser.STRING, 0)

        def expression(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = gramaticaParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(gramaticaParser.T_PRINT)
            self.state = 75
            self.match(gramaticaParser.T_LPAREN)
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 76
                self.match(gramaticaParser.STRING)
                pass

            elif la_ == 2:
                self.state = 77
                self.expression()
                pass


            self.state = 80
            self.match(gramaticaParser.T_RPAREN)
            self.state = 81
            self.match(gramaticaParser.T_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_INPUT(self):
            return self.getToken(gramaticaParser.T_INPUT, 0)

        def T_LPAREN(self):
            return self.getToken(gramaticaParser.T_LPAREN, 0)

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def T_RPAREN(self):
            return self.getToken(gramaticaParser.T_RPAREN, 0)

        def T_SEMICOLON(self):
            return self.getToken(gramaticaParser.T_SEMICOLON, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_inputStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputStmt" ):
                listener.enterInputStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputStmt" ):
                listener.exitInputStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputStmt" ):
                return visitor.visitInputStmt(self)
            else:
                return visitor.visitChildren(self)




    def inputStmt(self):

        localctx = gramaticaParser.InputStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_inputStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(gramaticaParser.T_INPUT)
            self.state = 84
            self.match(gramaticaParser.T_LPAREN)
            self.state = 85
            self.match(gramaticaParser.ID)
            self.state = 86
            self.match(gramaticaParser.T_RPAREN)
            self.state = 87
            self.match(gramaticaParser.T_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._statement = None # StatementContext
            self.if_block = list() # of StatementContexts
            self.else_block = list() # of StatementContexts

        def T_IF(self):
            return self.getToken(gramaticaParser.T_IF, 0)

        def T_LPAREN(self):
            return self.getToken(gramaticaParser.T_LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressionContext,0)


        def T_RPAREN(self):
            return self.getToken(gramaticaParser.T_RPAREN, 0)

        def T_LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.T_LBRACE)
            else:
                return self.getToken(gramaticaParser.T_LBRACE, i)

        def T_RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.T_RBRACE)
            else:
                return self.getToken(gramaticaParser.T_RBRACE, i)

        def T_ELSE(self):
            return self.getToken(gramaticaParser.T_ELSE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.StatementContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.StatementContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = gramaticaParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(gramaticaParser.T_IF)
            self.state = 90
            self.match(gramaticaParser.T_LPAREN)
            self.state = 91
            self.expression()
            self.state = 92
            self.match(gramaticaParser.T_RPAREN)
            self.state = 93
            self.match(gramaticaParser.T_LBRACE)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 268435828) != 0):
                self.state = 94
                localctx._statement = self.statement()
                localctx.if_block.append(localctx._statement)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(gramaticaParser.T_RBRACE)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 101
                self.match(gramaticaParser.T_ELSE)
                self.state = 102
                self.match(gramaticaParser.T_LBRACE)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 268435828) != 0):
                    self.state = 103
                    localctx._statement = self.statement()
                    localctx.else_block.append(localctx._statement)
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 109
                self.match(gramaticaParser.T_RBRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._statement = None # StatementContext
            self.block = list() # of StatementContexts

        def T_WHILE(self):
            return self.getToken(gramaticaParser.T_WHILE, 0)

        def T_LPAREN(self):
            return self.getToken(gramaticaParser.T_LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressionContext,0)


        def T_RPAREN(self):
            return self.getToken(gramaticaParser.T_RPAREN, 0)

        def T_LBRACE(self):
            return self.getToken(gramaticaParser.T_LBRACE, 0)

        def T_RBRACE(self):
            return self.getToken(gramaticaParser.T_RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.StatementContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.StatementContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = gramaticaParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(gramaticaParser.T_WHILE)
            self.state = 113
            self.match(gramaticaParser.T_LPAREN)
            self.state = 114
            self.expression()
            self.state = 115
            self.match(gramaticaParser.T_RPAREN)
            self.state = 116
            self.match(gramaticaParser.T_LBRACE)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 268435828) != 0):
                self.state = 117
                localctx._statement = self.statement()
                localctx.block.append(localctx._statement)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.match(gramaticaParser.T_RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOrExpression(self):
            return self.getTypedRuleContext(gramaticaParser.LogicalOrExpressionContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = gramaticaParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.logicalOrExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAndExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.LogicalAndExpressionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.LogicalAndExpressionContext,i)


        def T_OR(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.T_OR)
            else:
                return self.getToken(gramaticaParser.T_OR, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_logicalOrExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalOrExpression" ):
                listener.enterLogicalOrExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalOrExpression" ):
                listener.exitLogicalOrExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalOrExpression" ):
                return visitor.visitLogicalOrExpression(self)
            else:
                return visitor.visitChildren(self)




    def logicalOrExpression(self):

        localctx = gramaticaParser.LogicalOrExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_logicalOrExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.logicalAndExpression()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 128
                self.match(gramaticaParser.T_OR)
                self.state = 129
                self.logicalAndExpression()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalAndExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equalityExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.EqualityExpressionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.EqualityExpressionContext,i)


        def T_AND(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.T_AND)
            else:
                return self.getToken(gramaticaParser.T_AND, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_logicalAndExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalAndExpression" ):
                listener.enterLogicalAndExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalAndExpression" ):
                listener.exitLogicalAndExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalAndExpression" ):
                return visitor.visitLogicalAndExpression(self)
            else:
                return visitor.visitChildren(self)




    def logicalAndExpression(self):

        localctx = gramaticaParser.LogicalAndExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_logicalAndExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.equalityExpression()
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 136
                self.match(gramaticaParser.T_AND)
                self.state = 137
                self.equalityExpression()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualityExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relationalExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.RelationalExpressionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.RelationalExpressionContext,i)


        def T_EQ(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.T_EQ)
            else:
                return self.getToken(gramaticaParser.T_EQ, i)

        def T_NEQ(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.T_NEQ)
            else:
                return self.getToken(gramaticaParser.T_NEQ, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_equalityExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqualityExpression" ):
                listener.enterEqualityExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqualityExpression" ):
                listener.exitEqualityExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualityExpression" ):
                return visitor.visitEqualityExpression(self)
            else:
                return visitor.visitChildren(self)




    def equalityExpression(self):
